Fixed gradle build and maven publish; added github actions